--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@ personal-log.txt
 
 #dist
 /dist/mintex/**
+/dist/mintex*.zip
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
