--- a/docbuilderApp/.classpath
+++ b/docbuilderApp/.classpath
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="bin/docbuilder" path="docbuilder">
+	<classpathentry kind="src" output="bin/docbuilder" path="app">
 		<attributes>
 			<attribute name="gradle_scope" value="docbuilder"/>
+			<attribute name="gradle_used_by_scope" value="docbuilder"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-23/"/>
